mise a jour du gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ npm-debug.log
 yarn-error.log
 
 # IDEs and editors
+.vscode/
 .idea/
 .project
 .classpath
@@ -19,6 +20,8 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.editorconfig
+.browserslistrc
 
 # Visual Studio Code
 .vscode/*
